# mov-cli

./: .gitignore  Makefile  README.md  disclaimer.md  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codeberg.yaml  documentation.yaml
docs/: api.rst  conf.py  index.rst  media.rst  players.rst  utils.rst  utils.scraper.rst  utils.subtitles.rst
examples/: custom_cli.py
examples/youtube-api/: Makefile  README.md  requirements.txt
examples/youtube-api/api/: errors.py  main.py  models.py
mov_cli/: __init__.py  cache.py  config.py  config.template.toml  download.py  errors.py  http_client.py  logger.py  plugins.py  scraper.py
mov_cli/cli/: __main__.py  auto_select.py  configuration.py  episode.py  main_loop.py  play.py  plugins.py  random_tips.json  scraper.py  search.py  ui.py  utils.py  watch_options.py
mov_cli/dev_cli/: __main__.py  fzf-preview.sh  preview.py
mov_cli/media/: __init__.py  audio_track.py  episode_selector.py  media.py  metadata.py  quality.py  subtitle.py
mov_cli/players/: __init__.py  custom_player.py  iina.py  mpv.py  mpv_tty.py  player.py  syncplay.py  tty.py  vlc.py
mov_cli/utils/: __init__.py  episode_selector.py  ip.py  paths.py  platform.py  save.py  version.py
mov_cli/utils/scraper/: __init__.py  the_movie_db.py
mov_cli/utils/subtitles/: __init__.py  iso.md  lang.py
